# Gato-wwwaton

./: README.md  libros.json  package-lock.json
bec/: package-lock.json  package.json  tailwind.config.ts
bec/src/app/: globals.css  layout.tsx  page.tsx
bec/src/app/admin/: page.jsx
bec/src/app/catalogo/: page.jsx
bec/src/app/ficha/: page.jsx
bec/src/app/libro/: page.jsx
bec/src/app/login/: page.jsx
bec/src/app/solicitudes/: page.jsx
bec/src/app/user/: page.jsx
bec/src/components/: cardcarousel.jsx  carousel.jsx  footer.jsx  form.jsx  hscrollcards.jsx  libro.jsx  login.jsx  nav2.jsx  navbar.jsx  navbardamin.jsx  register.jsx  sidebar.jsx
bec/src/server/: .gitignore  Cargo.toml  README.md
bec/src/server/model/: Documento.json  Prestamo.json  SolicitudPrestamo.json  Usuario.json
bec/src/server/src/: main.rs
bec/src/server/src/api/: book_api.rs  document_api.rs  mod.rs  prestamos_api.rs  solicitudes_api.rs  user_api.rs
bec/src/server/src/model/: book_model.rs  document_model.rs  loginrequest_model.rs  mod.rs  model.rs  prestamo_model.rs  solicitud_prestamo_model.rs  user_model.rs
bec/src/server/src/repository/: logica_documento.rs  logica_prestamo.rs  logica_solicitud.rs  logica_usuario.rs  mongodb_repo.rs
client/: next.config.mjs  package-lock.json  package.json
client/src/app/: page.jsx
client/src/app/admin/: page.jsx
client/src/app/home/: page.jsx
client/src/app/login/: page.jsx
client/src/components/: NavBar.jsx
gw/: package-lock.json  package.json
gw/src/app/: layout.tsx  page.tsx
gw/src/app/login/: page.jsx
(+2 files in other folders)
